<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_comparateur_select"
        android:textSize="@dimen/fr_text_size"></TextView>


    <Spinner

        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_spinner"
        android:layout_marginTop="@dimen/margin_spinner"

        android:layout_marginEnd="@dimen/margin_spinner"

        android:textAlignment="center"
        android:textSize="@dimen/tv_size_spinner" />

    <Spinner

        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="@dimen/margin_spinner"
        android:layout_marginTop="@dimen/margin_spinner"

        android:layout_marginEnd="@dimen/margin_spinner"

        android:textAlignment="center"
        android:textSize="@dimen/tv_size_spinner" />

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_voiture"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/nomv1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/nomv2"

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>
        </LinearLayout>

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Chevaux"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/cv1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/cv2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

        </LinearLayout>

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_vm"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/vm1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/vm2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

        </LinearLayout>

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_poid"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/p1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/p2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

        </LinearLayout>

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="fill_parent"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_zeroACent"
                android:textSize="@dimen/fr_text_size"></TextView>


            <TextView
                android:id="@+id/zero1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

            <TextView
                android:id="@+id/zero2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_nomvl"
                android:textSize="@dimen/fr_text_size"></TextView>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>